Correct default gallery alignment
Default (unaligned) galleries should remain in the content area
and not be center aligned.

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1012,7 +1012,6 @@ input[type="number"] {
 	display: flex;
 	flex-wrap: wrap;
 	list-style-type: none;
-	margin: auto;
 	padding: 0;
 }
 
